--- a/prepare_data/prepare_data.ipynb
+++ b/prepare_data/prepare_data.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "e67262b2-6127-4975-830a-f09c112353e4",
+   "execution_count": null,
+   "id": "f2866de4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "import cv2\n",
     "import os\n",
-    "\n",
     "import PIL\n",
-    "from PIL import Image\n",
-    "\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e67262b2-6127-4975-830a-f09c112353e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "datagen = ImageDataGenerator(\n",
     "        rotation_range=40,\n",
     "        # width_shift_range=0.2,\n",
@@ -24,6 +31,7 @@
     "        fill_mode='nearest')\n",
     " \n",
     "    \n",
+    "\n",
     "def resizeImage(path):\n",
     "    basewidth = 400\n",
     "    img_resize = Image.open(path)\n",
@@ -31,8 +39,7 @@
     "    hsize = 400\n",
     "    img_resize = img_resize.resize((basewidth, hsize), Image.ANTIALIAS)\n",
     "    img_resize.save(path)\n",
-    "    \n",
-    "    \n",
+    "\n",
     "def Augment_And_Rotate(path,folderName):\n",
     "     \n",
     "    resizeImage(path)\n",
